Bug 366117 - korgac doesn't start korganizer on click as service name changed
Summary: korgac doesn't start korganizer on click as service name changed
Status: RESOLVED FIXED
Alias: None
Product: korgac
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-26 07:59 UTC by tkopecek
Modified: 2016-08-01 07:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments
patch (3.09 KB, patch)
2016-07-26 08:01 UTC, tkopecek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tkopecek 2016-07-26 07:59:58 UTC
Desktop file for korganizer was renamed from korganizer.desktop to org.kde.korganizer.desktop, so old calls via dbus' startServiceByDesktopPath no more work - see attached patch

Note: As I'm not using kmail, I don't know what kmail2 service was meant to be. Nevertheless, this service doesn't exist and I've modified it in patch only to be consistent. Feel free to ignore this line.

Quick temporary workaround is:
# sudo ln -s /usr/share/applications/org.kde.korganizer.desktop /usr/share/applications/korganizer.desktop

Reproducible: Always

Steps to Reproduce:
Left-click on tray icon.

Actual Results:  
Nothing happens

Expected Results:  
Start korganizer
Comment 1 tkopecek 2016-07-26 08:01:10 UTC
Created attachment 100307 [details]
patch
Comment 2 Laurent Montel 2016-08-01 07:27:30 UTC
Git commit 675f284ddcdd78fde85b8e03cf3e3164049ee9b9 by Montel Laurent.
Committed on 01/08/2016 at 07:26.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 366117 - korgac doesn't start korganizer on click as service name changed

Adapt patch from tkopecek@redhat.com and add test application.
Thanks
FIXED-IN: 5.3.0

M  +1    -1    kalarm/src/functions.cpp
M  +1    -1    kmail/agents/followupreminderagent/jobs/followupremindershowmessagejob.cpp
M  +5    -0    kmail/src/tests/CMakeLists.txt
A  +52   -0    kmail/src/tests/ktoolinvocationtest.cpp     [License: GPL (v2+)]
M  +1    -1    korganizer/korgac/alarmdialog.cpp
M  +1    -1    korganizer/korgac/alarmdockwindow.cpp

http://commits.kde.org/kdepim/675f284ddcdd78fde85b8e03cf3e3164049ee9b9