Fix Bug 366117 - korgac doesn't start korganizer on click as service name changed

Adapt patch from tkopecek@redhat.com and add test application.
Thanks
FIXED-IN: 5.3.0
BUG: 366117